--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
   <!-- Contact -->
   <section id="contact" class="fade-in">
     <h2>Let's Chat</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="your@example.com" required />
-      <textarea rows="5" placeholder="How can we help you?" required></textarea>
+    <form class="contact-form" id="contactForm">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <input type="email" id="email" placeholder="your@example.com" required />
+      <textarea id="message" rows="5" placeholder="How can we help you?" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-  </section>
+</section>
 
   <!-- Footer -->
   <footer>
@@ -106,6 +106,32 @@
     <p><a href="#home">Back to top ↑</a></p>
   </footer>
 
+  <script>
+document.getElementById('contactForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
+    
+    const data = {
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        message: document.getElementById('message').value
+    };
+
+    const response = await fetch("https://prod-29.westus.logic.azure.com:443/workflows/effdf88cec994f9790feab4f44000333/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=Z_0q7Oje0862t7mt8m_1rSUd8Z18wxfqJ0ynvTwiZeA", {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify(data)
+    });
+
+    if(response.ok){
+        alert("Message sent successfully!");
+        document.getElementById('contactForm').reset();
+    } else {
+        alert("Error sending message.");
+    }
+});
+</script>
   <script src="js/main.js"></script>
 </body>
 </html>
