--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#about">About</a>
       <a href="#process">Process</a>
       <a href="#services">Services</a>
-      <a href="#testimonials">Testimonials</a>
+      <!--<a href="#testimonials">Testimonials</a>-->
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -74,7 +74,7 @@
     </div>
   </section>
 
-  <!-- Testimonials -->
+  <!-- Testimonials 
   <section id="testimonials" class="fade-in">
     <h2>Client Testimonials</h2>
     <div class="grid">
@@ -87,7 +87,7 @@
         <h4>— Priya Desai</h4>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <!-- Contact -->
   <section id="contact" class="fade-in">
