Solve Popup Menu Issue Version1

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h2>Let's Chat</h2>
     <form class="contact-form" id="contactForm">
       <input type="text" id="name" placeholder="Your Name" required />
-      <input type="email" id="email" placeholder="your@example.com" required />
+      <input type="email" id="email" placeholder="Your Email Id" required />
       <textarea id="message" rows="5" placeholder="How can we help you?" required></textarea>
       <button type="submit">Send Message</button>
     </form>
