Update Model Content

--- a/index.html
+++ b/index.html
@@ -85,39 +85,47 @@
   </div>
 </section>
 
-  <!-- SharePoint Solutions Modal -->
-  <div id="modal-sharepoint" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>SharePoint Solutions</h2>
-      <p>We deliver robust and scalable SharePoint solutions for modern workplaces.</p>
-      <ul>
-        <li>Worked on SharePoint 2013, 2019, and SharePoint Online</li>
-        <li>Full SharePoint migration services</li>
-        <li>Custom SPFx Web Parts development</li>
-        <li>Automated workflows using Power Automate</li>
-        <li>Secure document management & collaboration</li>
-        <li>Modern UI/UX customization for SharePoint sites</li>
-      </ul>
-    </div>
+ <!-- SharePoint Solutions Modal -->
+<div id="modal-sharepoint" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>SharePoint Solutions</h2>
+    <p>We design, build, and optimize SharePoint solutions that empower your business.</p>
+    <ul>
+      <li><strong>Proven expertise</strong> in SharePoint On-Premises (2010, 2013, 2016, 2019, 2022) and SharePoint Online (Microsoft 365) — delivering solutions for both traditional server environments and the modern cloud platform.</li>
+      <li>End-to-end SharePoint migration services — seamless upgrade without data loss</li>
+      <li>Development of custom SPFx Web Parts & Extensions tailored to your business needs</li>
+      <li>Power Automate workflow automation to streamline business processes and save time</li>
+      <li>Secure document management with compliance-ready storage and access controls</li>
+      <li>Designing modern, responsive SharePoint sites with exceptional UI/UX</li>
+      <li>Integration with Microsoft Teams, Power BI, Power Apps for a connected workplace</li>
+      <li>Intranet & portal development for better internal communication and collaboration</li>
+      <li>Custom SharePoint branding & theming to align with your corporate identity</li>
+      <li>Performance optimization for faster and more reliable SharePoint environments</li>
+      <li>Governance & security best practices to protect your data</li>
+      <li>Custom forms & apps to replace InfoPath and enhance user productivity</li>
+    </ul>
   </div>
+</div>
 
-  <!-- Power Platform Modal -->
-  <div id="modal-powerplatform" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Power Platform</h2>
-      <p>We create highly customized business solutions with Power Platform.</p>
-      <ul>
-        <li>Build Canvas Apps from scratch</li>
-        <li>Integrate multiple data sources (SharePoint, SQL, Dataverse, etc.)</li>
-        <li>Advanced Power Automate flows for process automation</li>
-        <li>Custom Power BI dashboards for business insights</li>
-        <li>Model-Driven Apps with complex business logic</li>
-        <li>End-to-end Power Platform consultation & deployment</li>
-      </ul>
-    </div>
+<!-- Power Platform Modal -->
+<div id="modal-powerplatform" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Power Platform</h2>
+    <p>We create highly customized, scalable business solutions with Microsoft Power Platform to transform the way you work.</p>
+    <ul>
+      <li>Canvas App development from scratch — tailored apps designed for your specific business needs</li>
+      <li>Integration with multiple data sources — SharePoint, SQL Server, Dataverse, Excel, APIs, and more</li>
+      <li>Advanced Power Automate flows — streamline repetitive tasks, approvals, and complex business processes</li>
+      <li>Custom Power BI dashboards & reports — actionable insights for informed decision-making</li>
+      <li>AI Builder integration — add AI-powered features like form processing, sentiment analysis, and predictions</li>
+      <li>End-to-end Power Platform consultation & deployment — from planning to rollout and user adoption</li>
+      <li>Microsoft Teams integration — embed Power Apps, Power BI, and Flows for a connected workspace</li>
+      <li>Governance & security — best practices for managing environments, permissions, and compliance</li>
+    </ul>
   </div>
+</div>
 
 
   <!-- Contact -->
