Add Logo In Tab Header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PowerNest Digital – Smart Solutions</title>
+  <link rel="icon" href="/images/PD.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -60,72 +61,76 @@
 
   <!-- Services -->
   <section id="services" class="fade-in">
-  <h2>Our Services</h2>
-  <div class="grid">
-    <!-- Web Development -->
-    <div class="card">
-      <h3>Web Development</h3>
-      <p>Building modern, responsive, and result-driven web solutions.</p>
-      <!-- <button class="see-more-btn" data-modal="modal-webdev">See More</button> -->
-    </div>
+    <h2>Our Services</h2>
+    <div class="grid">
+      <!-- Web Development -->
+      <div class="card">
+        <h3>Web Development</h3>
+        <p>Building modern, responsive, and result-driven web solutions.</p>
+        <!-- <button class="see-more-btn" data-modal="modal-webdev">See More</button> -->
+      </div>
 
-    <!-- SharePoint Solutions -->
-    <div class="card">
-      <h3>SharePoint Solutions</h3>
-      <p>Custom SPFx web parts, workflows, and secure content management tailored for collaboration.</p>
-      <button class="see-more-btn" data-modal="modal-sharepoint">See More</button>
-    </div>
+      <!-- SharePoint Solutions -->
+      <div class="card">
+        <h3>SharePoint Solutions</h3>
+        <p>Custom SPFx web parts, workflows, and secure content management tailored for collaboration.</p>
+        <button class="see-more-btn" data-modal="modal-sharepoint">See More</button>
+      </div>
 
-    <!-- Power Platform -->
-    <div class="card">
-      <h3>Power Platform</h3>
-      <p>Canvas & Model-Driven Apps, Power Automate flows, Power BI dashboards—insights, automation, action.</p>
-      <button class="see-more-btn" data-modal="modal-powerplatform">See More</button>
+      <!-- Power Platform -->
+      <div class="card">
+        <h3>Power Platform</h3>
+        <p>Canvas & Model-Driven Apps, Power Automate flows, Power BI dashboards—insights, automation, action.</p>
+        <button class="see-more-btn" data-modal="modal-powerplatform">See More</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- SharePoint Solutions Modal -->
+  <div id="modal-sharepoint" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>SharePoint Solutions</h2>
+      <p>We design, build, and optimize SharePoint solutions that empower your business.</p>
+      <ul>
+        <li><strong>Proven expertise</strong> in SharePoint On-Premises (2010, 2013, 2016, 2019, 2022) and SharePoint
+          Online (Microsoft 365) — delivering solutions for both traditional server environments and the modern cloud
+          platform.</li>
+        <li>End-to-end SharePoint migration services — seamless upgrade without data loss</li>
+        <li>Development of custom SPFx Web Parts & Extensions tailored to your business needs</li>
+        <li>Power Automate workflow automation to streamline business processes and save time</li>
+        <li>Secure document management with compliance-ready storage and access controls</li>
+        <li>Designing modern, responsive SharePoint sites with exceptional UI/UX</li>
+        <li>Integration with Microsoft Teams, Power BI, Power Apps for a connected workplace</li>
+        <li>Intranet & portal development for better internal communication and collaboration</li>
+        <li>Custom SharePoint branding & theming to align with your corporate identity</li>
+        <li>Performance optimization for faster and more reliable SharePoint environments</li>
+        <li>Governance & security best practices to protect your data</li>
+        <li>Custom forms & apps to replace InfoPath and enhance user productivity</li>
+      </ul>
     </div>
   </div>
-</section>
 
- <!-- SharePoint Solutions Modal -->
-<div id="modal-sharepoint" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>SharePoint Solutions</h2>
-    <p>We design, build, and optimize SharePoint solutions that empower your business.</p>
-    <ul>
-      <li><strong>Proven expertise</strong> in SharePoint On-Premises (2010, 2013, 2016, 2019, 2022) and SharePoint Online (Microsoft 365) — delivering solutions for both traditional server environments and the modern cloud platform.</li>
-      <li>End-to-end SharePoint migration services — seamless upgrade without data loss</li>
-      <li>Development of custom SPFx Web Parts & Extensions tailored to your business needs</li>
-      <li>Power Automate workflow automation to streamline business processes and save time</li>
-      <li>Secure document management with compliance-ready storage and access controls</li>
-      <li>Designing modern, responsive SharePoint sites with exceptional UI/UX</li>
-      <li>Integration with Microsoft Teams, Power BI, Power Apps for a connected workplace</li>
-      <li>Intranet & portal development for better internal communication and collaboration</li>
-      <li>Custom SharePoint branding & theming to align with your corporate identity</li>
-      <li>Performance optimization for faster and more reliable SharePoint environments</li>
-      <li>Governance & security best practices to protect your data</li>
-      <li>Custom forms & apps to replace InfoPath and enhance user productivity</li>
-    </ul>
+  <!-- Power Platform Modal -->
+  <div id="modal-powerplatform" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Power Platform</h2>
+      <p>We create highly customized, scalable business solutions with Microsoft Power Platform to transform the way you
+        work.</p>
+      <ul>
+        <li>Canvas App development from scratch — tailored apps designed for your specific business needs</li>
+        <li>Integration with multiple data sources — SharePoint, SQL Server, Dataverse, Excel, APIs, and more</li>
+        <li>Advanced Power Automate flows — streamline repetitive tasks, approvals, and complex business processes</li>
+        <li>Custom Power BI dashboards & reports — actionable insights for informed decision-making</li>
+        <li>AI Builder integration — add AI-powered features like form processing, sentiment analysis, and predictions
+        </li>
+        <li>End-to-end Power Platform consultation & deployment — from planning to rollout and user adoption</li>
+        <li>Microsoft Teams integration — embed Power Apps, Power BI, and Flows for a connected workspace</li>
+        <li>Governance & security — best practices for managing environments, permissions, and compliance</li>
+      </ul>
+    </div>
   </div>
-</div>
-
-<!-- Power Platform Modal -->
-<div id="modal-powerplatform" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>Power Platform</h2>
-    <p>We create highly customized, scalable business solutions with Microsoft Power Platform to transform the way you work.</p>
-    <ul>
-      <li>Canvas App development from scratch — tailored apps designed for your specific business needs</li>
-      <li>Integration with multiple data sources — SharePoint, SQL Server, Dataverse, Excel, APIs, and more</li>
-      <li>Advanced Power Automate flows — streamline repetitive tasks, approvals, and complex business processes</li>
-      <li>Custom Power BI dashboards & reports — actionable insights for informed decision-making</li>
-      <li>AI Builder integration — add AI-powered features like form processing, sentiment analysis, and predictions</li>
-      <li>End-to-end Power Platform consultation & deployment — from planning to rollout and user adoption</li>
-      <li>Microsoft Teams integration — embed Power Apps, Power BI, and Flows for a connected workspace</li>
-      <li>Governance & security — best practices for managing environments, permissions, and compliance</li>
-    </ul>
-  </div>
-</div>
 
 
   <!-- Contact -->
