Change Some Content

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h2>SharePoint Solutions</h2>
       <p>We design, build, and optimize SharePoint solutions that empower your business.</p>
       <ul>
-        <li><strong>Proven expertise</strong> in SharePoint On-Premises (2010, 2013, 2016, 2019, 2022) and SharePoint
+        <li><strong>Proven expertise</strong> in SharePoint On-Premises (2013, 2016, 2019, 2022) and SharePoint
           Online (Microsoft 365) — delivering solutions for both traditional server environments and the modern cloud
           platform.</li>
         <li>End-to-end SharePoint migration services — seamless upgrade without data loss</li>
