--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PowerNest Digital – Smart Solutions</title>
-  <link rel="icon" href="/images/PD_PD.png" type="image/x-icon" sizes="64x64" />
+  <link rel="icon" href="/images/Big PD.png" type="image/x-icon" sizes="64x64" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
