--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
   <!-- Header -->
   <header>
-    <div class="logo">PowerNest Digital</div>
+    <div class="logo">
+      <img src="images/PN DIGITAL.png" alt="PowerNest Digital Logo"
+        style="height:40px; vertical-align:middle; margin-right:8px;">
+      <span>PowerNest Digital</span>
+    </div>
     <div class="menu-toggle" id="menu-toggle">☰</div>
     <nav id="nav-menu">
       <a href="#home">Home</a>
